--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,10 @@ dependencies {
     //implementation "androidx.compose.material3:material3:1.0.1"
     implementation("io.coil-kt:coil:2.3.0")
     implementation("io.coil-kt:coil-compose:2.3.0")
+    implementation("com.google.accompanist:accompanist-adaptive:0.26.2-beta")
+    implementation("androidx.compose.material3:material3-window-size-class:1.0.1")
+    implementation("androidx.compose.material:material-icons-extended")
+    implementation("androidx.navigation:navigation-compose:2.5.3")
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
