--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,10 @@
 name: Test_and_build_artifacts_on_release
 
 on:
- pull_request:
+  push:
+    branches:
+     - 'master'
+  pull_request:
    branches:
      - 'master'
 
