--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,5 +7,6 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v2
       - name: Build the app
+      - uses: actions/setup-java@v1
         with: { java-version: 1.8 }
         run: ./gradlew build
