--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,13 +3,23 @@ name: Android CI
 on: [push]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - name: set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 17
-      - name: Build with Gradle
-        run: ./gradlew assembleDebug
+  apk:
+   name: Generate APK
+   runs-on: ubuntu-latest
+   steps:
+     - name: Checkout
+       uses: actions/checkout@v2.4.0
+     - name: Setup JDK 1.8
+       uses: actions/setup-java@v2.5.0
+       with:
+         distribution: temurin
+         java-version: "17"
+     - name: Set execution flag for gradlew
+       run: chmod +x gradlew
+     - name: Build APK
+       run: bash ./gradlew assembleDebug --stacktrace
+     - name: Upload APK
+       uses: actions/upload-artifact@v1
+       with:
+         name: apk
+         path: app/build/outputs/apk/debug/app-debug.apk
